# Proiect

./: CMakeLists.txt  main.cpp  plot.py
MemoryTests/: MatrixTest.cpp  MatrixTest.h  TestRunner.cpp  TestRunner.h  VectorTest.cpp  VectorTest.h
Results/: Result.cpp  Result.h  ResultLogger.cpp  ResultLogger.h
